--- a/src/ToDoList.API/ToDoList.API.csproj
+++ b/src/ToDoList.API/ToDoList.API.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ToDoList.Application\ToDoList.Application.csproj" />
+    <ProjectReference Include="..\ToDoList.Infra.Data\ToDoList.Infra.Data.csproj" />
+  </ItemGroup>
+
 </Project>
