--- a/src/ToDoList.Infra.Data/ToDoList.Infra.Data.csproj
+++ b/src/ToDoList.Infra.Data/ToDoList.Infra.Data.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ToDoList.Domain\ToDoList.Domain.csproj" />
+    <ProjectReference Include="..\ToDoList.Application\ToDoList.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
