--- a/src/ToDoList.API/appsettings.json
+++ b/src/ToDoList.API/appsettings.json
@@ -1,9 +1,20 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;port=3306;Database=todo;Uid=root;Pwd=samuel5723;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "Jwt" : {
+    "Key": "bGVhbmRyYXN1juawwuZGFlaW50ZWxpZ2VudGV0ZWFtbw==",
+    "Login": "samuel",
+    "Password": "teste123",
+    "HoursToExpire": "1"
+  },
+
   "AllowedHosts": "*"
 }
