Token agora funcionando

--- a/src/ToDoList.API/appsettings.json
+++ b/src/ToDoList.API/appsettings.json
@@ -10,8 +10,8 @@
   },
 
   "Jwt" : {
-    "Key": "bGVhbmRyYXN1juawwuZGFlaW50ZWxpZ2VudGV0ZWFtbw==",
-    "Login": "samuel",
+    "Key": "bGVhbmRyYXN1cGVybGluZGFlaW50ZWxpZ2VudGV0ZWFtbw==",
+    "Login": "teste",
     "Password": "teste123",
     "HoursToExpire": "1"
   },
