Falha no Created do AssignmentList

--- a/src/ToDoList.API/appsettings.json
+++ b/src/ToDoList.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;port=3306;Database=todoapi;Uid=root;Pwd=samuel5723;"
+    "DefaultConnection": "Server=localhost;port=3306;Database=isaac;Uid=SamuelEsdras;Pwd=05072003;"
   },
   "Logging": {
     "LogLevel": {
