Alguém me ajude

--- a/src/ToDoList.API/appsettings.json
+++ b/src/ToDoList.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;port=3306;Database=isaac;Uid=SamuelEsdras;Pwd=05072003;"
+    "DefaultConnection": "Server=localhost;port=3306;Database=juliano;Uid=SamuelEsdras;Pwd=05072003;"
   },
   "Logging": {
     "LogLevel": {
